--- a/views/recruiter_all_job_candidates.ejs
+++ b/views/recruiter_all_job_candidates.ejs
@@ -1,6 +1,6 @@
 <% include includes/dashboard_header %>
-<% include includes/recruiter_nav %>
-<% include includes/dashboard_top_bar %>  
+    <% include includes/recruiter_nav %>
+        <% include includes/dashboard_top_bar %>
 
 
             <section>
@@ -9,7 +9,7 @@
                     </div>
                     <div class="jobs_all">
                         <% var allCandidatesUrl = '/recruiters/all-job-candidates/' + job_id; %>
-                        <a href="<%=allCandidatesUrl%>" class="active"> All </a>
+                            <a href="<%=allCandidatesUrl%>" class="active"> All </a>
                     </div>
                     <div class="invite_btn" id="download_all_candidates_btn">
                         <button>
@@ -23,7 +23,7 @@
 
             </section>
 
-           <!-- <section>
+            <!-- <section>
                 <div class="flex_row_align_center_justify_start candidate_search_div">
                     <div class="mr-3 filter_txt">
                         <p>
@@ -61,128 +61,128 @@
                                 <th>Email</th>
                                 <th>Date Applied</th>
                                 <th>View Profile</th>
-                            </tr>                            
+                            </tr>
                         </thead>
-                        
+
                         <tbody id="applicants_data"></tbody>
-                                    
+
                     </table>
                 </div>
             </section>
 
-        </div>
-    </section>
+            </div>
+            </section>
 
 
-<% include includes/global_dashboard_scripts%>
+            <% include includes/global_dashboard_scripts%>
 
-<script>
-    $(document).ready(function(){
-        //Get all job applicants
-        $.ajax({
-            url: '/jobs/get-all-job-applicants',
-            type: 'post',
-            data: {
-                job_id : '<%=job_id%>'
-            },
-                      
-            success: function(data){
-                var content = '';
-                var allApplicantsTitleContent = '';
-                var job_name = '<%=job_name%>';
+                <script>
+                    $(document).ready(function() {
+                        //Get all job applicants
+                        $.ajax({
+                            url: '/jobs/get-all-job-applicants',
+                            type: 'post',
+                            data: {
+                                job_id: '<%=job_id%>'
+                            },
 
-                if(!data || data.applicants.length == 0){
-                    content = '';
-                    allApplicantsTitleContent = '<p>All Applicants for '+ job_name+' (0)</p>';
+                            success: function(data) {
+                                var content = '';
+                                var allApplicantsTitleContent = '';
+                                var job_name = '<%=job_name%>';
 
-                } else{
-                    for(var i = 0; i < data.applicants.length; i++){
-                        let applicantFullName = data.applicants[i].first_name + ' ' + data.applicants[i].last_name;
+                                if (!data || data.applicants.length == 0) {
+                                    content = '';
+                                    allApplicantsTitleContent = '<p>All Applicants for ' + job_name + ' (0)</p>';
 
-                        let applicantPicture  = typeof data.applicants[i].photo_url != 'undefined' 
-                            && data.applicants[i].photo_url != 'null' 
-                            && (data.applicants[i].photo_url != '') ? data.applicants[i].photo_url : '/images/no-user.png';
-                        
+                                } else {
+                                    for (var i = 0; i < data.applicants.length; i++) {
+                                        var applicantFullName = data.applicants[i].first_name + ' ' + data.applicants[i].last_name;
 
-                        var job_id = '<%=job_id%>';
-                        
-                        content += '<tr> \
+                                        var applicantPicture = typeof data.applicants[i].photo_url != 'undefined' &&
+                                            data.applicants[i].photo_url != 'null' &&
+                                            (data.applicants[i].photo_url != '') ? data.applicants[i].photo_url : '/images/no-user.png';
+
+
+                                        var job_id = '<%=job_id%>';
+
+                                        content += '<tr> \
                                         <td class="cand_image"> \
                                             <div> \
-                                                <img src="'+ applicantPicture +'" alt="User Image"> \
-                                            </div>' +                                   
-                                        '</td> \
+                                                <img src="' + applicantPicture + '" alt="User Image"> \
+                                            </div>' +
+                                            '</td> \
                                         <td>' + applicantFullName + '</td> \
-                                        <td>' + data.applicants[i].email+ '</td> \
+                                        <td>' + data.applicants[i].email + '</td> \
                                         <td>' + data.applicants[i].date_applied + '</td> \
                                         <td class="view_candd_link"> \
-                                            <a href="/recruiters/candidate-info/'+data.applicants[i].user_id+'/?l='+job_id+'"> \
+                                            <a href="/recruiters/candidate-info/' + data.applicants[i].user_id + '/?l=' + job_id + '"> \
                                                 View Profile \
                                             </a> \
                                         </td> \
                                     </tr>';
 
-                        allApplicantsTitleContent = '<p>All Applicants for '+ job_name+' (' + data.applicants.length + ')</p>';
-                    }
-                }
-          
-                $('#applicants_data').html(content);
-                $('#all_applicants_title').html(allApplicantsTitleContent);
+                                        allApplicantsTitleContent = '<p>All Applicants for ' + job_name + ' (' + data.applicants.length + ')</p>';
+                                    }
+                                }
 
-                $("#applicants_table").DataTable({
-                    'paging' : true,
-                    'processing': true,
-                    'language': {
-                        'loadingRecords': '&nbsp;',
-                        'processing': 'Loading...'
-                    }   
-                });
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                var errorMsg = 'All Applicants Request failed: ' + xhr.responseText;
-                console.log(errorMsg)
-            }
-        });
-    });
-</script>
+                                $('#applicants_data').html(content);
+                                $('#all_applicants_title').html(allApplicantsTitleContent);
 
-<!-- Download script-->
-<script>
-    $(document).ready(function(){
-        $("#download_all_candidates_btn").click(function(){
-            var job_id = '<%=job_id%>';
-            var job_name = '<%=job_name%>';
-                    
-            $.ajax({
-                url: '/recruiters/download-excel-file',
-                type: 'post',
-                data: {
-                    job_id : job_id,
-                    job_name: job_name,
-                    excel_file_to_download: 'all'
-                },
-                xhrFields: {
-                    responseType: 'blob'
-                },
-                                                    
-                success: function(response, status, xhr){ 
-                    var fileName = xhr.getResponseHeader('Content-Disposition').split("=")[1];
-                    fileName = fileName.substring(1, fileName.length - 1);
-                    var a = document.createElement('a');
-                    var url = window.URL.createObjectURL(response);
-                    a.href = url;
-                    a.download = fileName;
-                    a.click();
-                    window.URL.revokeObjectURL(url);
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    var errorMsg = 'Downloading Excel Request failed: ' + xhr.responseText;
-                    console.log(errorMsg)
-                }
-            });          
-        }); 
-    });
-</script>
-<!-- End Download script-->
+                                $("#applicants_table").DataTable({
+                                    'paging': true,
+                                    'processing': true,
+                                    'language': {
+                                        'loadingRecords': '&nbsp;',
+                                        'processing': 'Loading...'
+                                    }
+                                });
+                            },
+                            error: function(xhr, ajaxOptions, thrownError) {
+                                var errorMsg = 'All Applicants Request failed: ' + xhr.responseText;
+                                console.log(errorMsg)
+                            }
+                        });
+                    });
+                </script>
 
-<% include includes/global_dashboard_bottom%>
+                <!-- Download script-->
+                <script>
+                    $(document).ready(function() {
+                        $("#download_all_candidates_btn").click(function() {
+                            var job_id = '<%=job_id%>';
+                            var job_name = '<%=job_name%>';
+
+                            $.ajax({
+                                url: '/recruiters/download-excel-file',
+                                type: 'post',
+                                data: {
+                                    job_id: job_id,
+                                    job_name: job_name,
+                                    excel_file_to_download: 'all'
+                                },
+                                xhrFields: {
+                                    responseType: 'blob'
+                                },
+
+                                success: function(response, status, xhr) {
+                                    var fileName = xhr.getResponseHeader('Content-Disposition').split("=")[1];
+                                    fileName = fileName.substring(1, fileName.length - 1);
+                                    var a = document.createElement('a');
+                                    var url = window.URL.createObjectURL(response);
+                                    a.href = url;
+                                    a.download = fileName;
+                                    a.click();
+                                    window.URL.revokeObjectURL(url);
+                                },
+                                error: function(xhr, ajaxOptions, thrownError) {
+                                    var errorMsg = 'Downloading Excel Request failed: ' + xhr.responseText;
+                                    console.log(errorMsg)
+                                }
+                            });
+                        });
+                    });
+                </script>
+                <!-- End Download script-->
+
+                <% include includes/global_dashboard_bottom%>
